{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 205,
  "lineage": "5d387055-3703-8072-9540-76e3dc38716d",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "platform_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "platform-data",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ecps.io/owner": "platform",
                  "ecps.io/type": "data"
                },
                "name": "platform-data",
                "resource_version": "6798",
                "uid": "ed2b2f0f-edd2-478e-a890-43f5a80db33a"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "platform-data"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "platform_identity",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "platform-identity",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ecps.io/owner": "platform",
                  "ecps.io/type": "identity"
                },
                "name": "platform-identity",
                "resource_version": "6797",
                "uid": "c8ae7ae3-ea63-433f-935a-cddcbd13f2ea"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "platform-identity"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "platform_observability",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "platform-observability",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ecps.io/owner": "platform",
                  "ecps.io/type": "observability"
                },
                "name": "platform-observability",
                "resource_version": "4714",
                "uid": "7ae15bf1-e91e-4117-974b-7e3716a69fcb"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "platform-observability"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "platform_system",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "platform-system",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ecps.io/owner": "platform",
                  "ecps.io/type": "system"
                },
                "name": "platform-system",
                "resource_version": "6796",
                "uid": "e9bc1840-9e5b-4c05-97c1-67f6672c167a"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "platform-system"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "team_alpha",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-alpha",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ecps.io/owner": "team-alpha",
                  "ecps.io/type": "application"
                },
                "name": "team-alpha",
                "resource_version": "6799",
                "uid": "573421b8-7a8a-430c-a72a-3545073a47c6"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "team-alpha"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "team_beta",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-beta",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ecps.io/owner": "team-beta",
                  "ecps.io/type": "application"
                },
                "name": "team-beta",
                "resource_version": "6795",
                "uid": "22211e1b-45e6-44ed-95a6-40e881f01365"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "team-beta"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "team_alpha_allow_platform_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-alpha/allow-platform-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "allow-platform-ingress",
                "namespace": "team-alpha",
                "resource_version": "6814",
                "uid": "e5f2a351-c3ae-45cb-8496-d48d3bf7f0e6"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "ecps.io/type": "system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-platform-ingress",
            "namespace": "team-alpha"
          },
          "dependencies": [
            "kubernetes_namespace.team_alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "team_alpha_allow_same_namespace_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-alpha/allow-same-namespace-egress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "allow-same-namespace-egress",
                "namespace": "team-alpha",
                "resource_version": "6819",
                "uid": "ef20f684-da44-4f3c-88bc-39e41ada4dbf"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-same-namespace-egress",
            "namespace": "team-alpha"
          },
          "dependencies": [
            "kubernetes_namespace.team_alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "team_alpha_allow_same_namespace_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-alpha/allow-same-namespace-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "allow-same-namespace-ingress",
                "namespace": "team-alpha",
                "resource_version": "6817",
                "uid": "2c4a0d99-d8c6-4cb3-98a2-662a4282b30d"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-same-namespace-ingress",
            "namespace": "team-alpha"
          },
          "dependencies": [
            "kubernetes_namespace.team_alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "team_alpha_default_deny_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-alpha/default-deny-egress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "default-deny-egress",
                "namespace": "team-alpha",
                "resource_version": "6821",
                "uid": "9a249aec-234e-44cd-b1ab-ca9258b60799"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-egress",
            "namespace": "team-alpha"
          },
          "dependencies": [
            "kubernetes_namespace.team_alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "team_alpha_default_deny_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-alpha/default-deny-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "default-deny-ingress",
                "namespace": "team-alpha",
                "resource_version": "6815",
                "uid": "fba60d2c-3b6a-410b-830a-8a94ff4ae12c"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-ingress",
            "namespace": "team-alpha"
          },
          "dependencies": [
            "kubernetes_namespace.team_alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "team_beta_allow_platform_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-beta/allow-platform-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "allow-platform-ingress",
                "namespace": "team-beta",
                "resource_version": "6823",
                "uid": "b5c30070-a978-4046-a07a-af4a37c6dd35"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "ecps.io/type": "system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-platform-ingress",
            "namespace": "team-beta"
          },
          "dependencies": [
            "kubernetes_namespace.team_beta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "team_beta_allow_same_namespace_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-beta/allow-same-namespace-egress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "allow-same-namespace-egress",
                "namespace": "team-beta",
                "resource_version": "6827",
                "uid": "d1ab9e27-6aa7-482d-8db3-1f35499e51f7"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-same-namespace-egress",
            "namespace": "team-beta"
          },
          "dependencies": [
            "kubernetes_namespace.team_beta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "team_beta_allow_same_namespace_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-beta/allow-same-namespace-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "allow-same-namespace-ingress",
                "namespace": "team-beta",
                "resource_version": "6829",
                "uid": "aa07f706-5512-4ecc-b091-ceb7f1b7e4ef"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-same-namespace-ingress",
            "namespace": "team-beta"
          },
          "dependencies": [
            "kubernetes_namespace.team_beta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "team_beta_default_deny_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-beta/default-deny-egress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "default-deny-egress",
                "namespace": "team-beta",
                "resource_version": "6824",
                "uid": "2851250d-bab7-4f56-8e0c-40ff70add4db"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-egress",
            "namespace": "team-beta"
          },
          "dependencies": [
            "kubernetes_namespace.team_beta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "team_beta_default_deny_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "team-beta/default-deny-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "default-deny-ingress",
                "namespace": "team-beta",
                "resource_version": "6826",
                "uid": "bb647782-ee68-4857-a3bb-dd881b3627b9"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-ingress",
            "namespace": "team-beta"
          },
          "dependencies": [
            "kubernetes_namespace.team_beta"
          ]
        }
      ]
    },
    {
      "module": "module.platform_data",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "minio",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "platform-data/minio",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "minio"
                },
                "name": "minio",
                "namespace": "platform-data",
                "resource_version": "6836",
                "uid": "4407596c-110f-4917-9ec3-cd03f9cd8457"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.247.139",
                "cluster_ips": [
                  "10.96.247.139"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "api",
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  },
                  {
                    "name": "console",
                    "node_port": 0,
                    "port": 9001,
                    "protocol": "TCP",
                    "target_port": "9001"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "minio"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "minio",
            "namespace": "platform-data"
          },
          "dependencies": [
            "kubernetes_namespace.platform_data"
          ]
        }
      ]
    },
    {
      "module": "module.platform_data",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "platform-data/postgres",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "postgres"
                },
                "name": "postgres",
                "namespace": "platform-data",
                "resource_version": "6832",
                "uid": "18ca3d5c-70b3-44b7-bdc2-66714da78325"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.62.16",
                "cluster_ips": [
                  "10.96.62.16"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "postgres",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "postgres",
            "namespace": "platform-data"
          },
          "dependencies": [
            "kubernetes_namespace.platform_data"
          ]
        }
      ]
    },
    {
      "module": "module.platform_data",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "platform-data/redis",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "redis"
                },
                "name": "redis",
                "namespace": "platform-data",
                "resource_version": "6840",
                "uid": "a8b1084c-cdb0-44eb-b867-d99734732fe1"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.50.234",
                "cluster_ips": [
                  "10.96.50.234"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "redis",
                    "node_port": 0,
                    "port": 6379,
                    "protocol": "TCP",
                    "target_port": "6379"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "redis"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "redis",
            "namespace": "platform-data"
          },
          "dependencies": [
            "kubernetes_namespace.platform_data"
          ]
        }
      ]
    },
    {
      "module": "module.platform_identity",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "keycloak",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "platform-identity/keycloak",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/backend-protocol": "HTTP"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app": "keycloak"
                },
                "name": "keycloak",
                "namespace": "platform-identity",
                "resource_version": "6831",
                "uid": "e172cf7a-8cfe-4f3e-a177-bb5b56d6f373"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "keycloak.platform.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "keycloak",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "keycloak",
            "namespace": "platform-identity"
          },
          "dependencies": [
            "kubernetes_namespace.platform_identity",
            "module.platform_identity.kubernetes_service.keycloak"
          ]
        }
      ]
    },
    {
      "module": "module.platform_identity",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "keycloak",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "platform-identity/keycloak",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "keycloak"
                },
                "name": "keycloak",
                "namespace": "platform-identity",
                "resource_version": "6816",
                "uid": "1831b26a-5146-40cb-afe4-9fbd1cc6a5c6"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.226.139",
                "cluster_ips": [
                  "10.96.226.139"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "keycloak"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "keycloak",
            "namespace": "platform-identity"
          },
          "dependencies": [
            "kubernetes_namespace.platform_identity"
          ]
        }
      ]
    }
  ]
}